--- a/cmq.tmpl
+++ b/cmq.tmpl
@@ -6,8 +6,8 @@
 #SBATCH --cpus-per-task={{ per_task_cpus | 72 }}
 ##SBATCH --partition=bigmem
 #SBATCH --time={{ walltime | 24:00:00 }}
-#SBATCH -M wice
-#SBATCH --reservation=rocky9_pilot
+#SBATCH -M genius
+##SBATCH --reservation=rocky9_pilot
 #SBATCH -A lp_climateplants
 
 source $VSC_HOME/.bashrc
