--- a/cmq.tmpl
+++ b/cmq.tmpl
@@ -6,7 +6,7 @@
 #SBATCH --cpus-per-task={{ per_task_cpus | 72 }}
 ##SBATCH --partition=bigmem
 #SBATCH --time={{ walltime | 24:00:00 }}
-#SBATCH -M genius
+#SBATCH -M wice
 ##SBATCH --reservation=rocky9_pilot
 #SBATCH -A lp_climateplants
 
