--- a/cmq.tmpl
+++ b/cmq.tmpl
@@ -3,11 +3,11 @@
 #SBATCH --mem-per-cpu={{ per_cpu_mem }}
 #SBATCH --array=1-{{ n_jobs }}
 #SBATCH --ntasks={{ n_tasks | 1 }}
-#SBATCH --cpus-per-task={{ per_task_cpus | 36 }}
+#SBATCH --cpus-per-task={{ per_task_cpus | 72 }}
 ##SBATCH --partition=bigmem
 #SBATCH --time={{ walltime | 24:00:00 }}
-#SBATCH -M genius
-##SBATCH --reservation=rocky9_pilot
+#SBATCH -M wice
+#SBATCH --reservation=rocky9_pilot
 #SBATCH -A lp_climateplants
 
 source $VSC_HOME/.bashrc
